fix background image not showing

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-    background-image: url("/home/roice/vscode/JavaScript30/practice/01 - JavaScript Drum Kit/background.jpg");
+    background-image: url("sounds/background.jpg");
     font-family: 'Courier New', Courier, monospace;
    background-size: cover;
 }
